# recruiter-chatbot

./: .env.example  .flake8  .gcloudignore  .gitignore  .stignore  CLAUDE.local.md  GCP_SETUP.md  PROJECT_STATUS.md  README.md  app.yaml  environment-minimal.yml  environment.yml  launch.sh  pyproject.toml  requirements-full.txt  requirements.txt  run_tests.py  streamlit_app.py  test_rag.py
.devcontainer/: Dockerfile  devcontainer.json
.streamlit/: config.toml
EDA/: explore.ipynb
configs/: config.yaml
data/documents/career_stories/: bennet_pump.md  bosch_senior_software_developer.md  bosch_senior_systems_integration_engineer.md  burke_porter.md  education.md  hanon.md  harman.md  old_resume.md  professional_skills.md  sample_story.md  visteon_JCI.md
debug_tests/: debug_gcp.py  debug_structured_handler.py  test_cloud_handler.py  test_integration.py  test_minimal_gcp.py
eda/: test-migration.ipynb
src/: document_processor.py  gcpCredentials.py  llm_interface.py  logger.py  main.py  rag_system.py  streamlit_app.py  utils.py  vector_store.py
static/: styles.css
tests/: test_document_processor.py  test_logging.py  test_rate_limiting.py  test_vector_store.py
